--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
-    "mongoose": "^4.7.3"
+    "mongoose": "^4.7.3",
+    "var": "^0.2.0"
   }
 }
