--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express-jwt": "^5.1.0",
     "mongoose": "^4.7.3",
     "var": "^0.2.0"
+  },
+  "devDependencies": {
+    "express-mongoose-generator": "^3.0.1"
   }
 }
