--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express-jwt": "^5.1.0",
     "mongoose": "^4.7.3",
     "var": "^0.2.0",
-    "express-mongoose-generator": "^3.0.1"
+    //"express-mongoose-generator": "^3.0.1"
   }
 }
