--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
     "mongoose": "^4.7.3",
-    "var": "^0.2.0",
-    //"express-mongoose-generator": "^3.0.1"
+    "var": "^0.2.0"
   }
 }
